@@ -38,6 +38,8 @@
 <p>2017-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pcx.c (ReadPCXImage): Fix SourceForge issue #494 &quot;memory
+leak in pcx.c&quot;.</li>
 <li>coders/pcd.c (ReadPCDImage): Fix SourceForge issue #493 &quot;memory
 leak in ReadPCDImage&quot;.</li>
 <li>coders/histogram.c (WriteHISTOGRAMImage): Fix SourceForge issue
